# rflying_tower_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  .prospector.yaml  .python-version  README.md  README.rst  example_rules.yaml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/actions/setup_python_env/: action.yaml
.github/workflows/: codeql.yml  pre-commit.yaml
rflying_tower_bot/: __init__.py  __main__.py  config.py  history.py  inbox.py  modlog.py  post_flair.py  post_stream.py  removal_reasons.py  ruleset_schemas.py  utilities.py
tests/: __init__.py  test_config.py  test_history.py  test_inbox.py  test_main.py  test_modlog.py  test_post_stream.py  test_rflying_tower_bot.py  test_ruleset_schemas.py  test_utilities.py
