[tool.poetry]
name = "rflying_tower_bot"
version = "0.4.0"
description = ""
authors = ["Kris Knigga <kris@knigga.com>"]

[tool.poetry.dependencies]
python = "^3.12"
asyncpraw = "^7.7.1"
pydantic-yaml = "^1.3.0"
aiohttp = "^3.9.5"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
sentry-sdk = "^2.10.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.1"
pytest = "^6.2"
prospector = {extras = ["with-bandit", "with-mypy"], version = "^1.10.3"}
types-PyYAML = "^6.0.12.20240311"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
ignore = [
  "D203",
  "D212",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = 'asyncpraw.*'
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
