[tool.poetry]
name = "rflying_tower_bot"
version = "0.6.6"
description = ""
authors = ["Kris Knigga <kris@knigga.com>"]

[tool.poetry.dependencies]
python = "^3.12"
asyncpraw = "^7.7.1"
pydantic-yaml = "^1.3.0"
aiohttp = "^3.9.5"
pydantic = "^2.8.2"
python-dotenv = "^1.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
sentry-sdk = "^2.10.0"
python-logging-discord-handler = "^0.1.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.1"
pytest = ">=8.4.1"
prospector = {extras = ["with-bandit", "with-mypy"], version = "^1.10.3"}
types-PyYAML = "^6.0.12.20240311"
pyrefly = "^0.22.0"
pytest-cov = "^6.2.1"
pytest-asyncio = "^1.0.0"
pytest-mock = "^3.14.1"

[tool.poetry_bumpversion.file."rflying_tower_bot/__init__.py"]

[tool.poetry_bumpversion.file."tests/test_rflying_tower_bot.py"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
ignore = [
  "D203",
  "D212",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = 'asyncpraw.*'
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyrefly]
replace-imports-with-any = ["asyncpraw.*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
