[project]
name = "rflying_tower_bot"
version = "0.6.6"
description = ""
authors = [{ name = "Kris Knigga", email = "kris@knigga.com" }]
requires-python = ">=3.12,<4"
dependencies = [
    "asyncpraw>=7.7.1,<8",
    "pydantic-yaml>=1.3.0,<2",
    "aiohttp>=3.9.5,<4",
    "pydantic>=2.8.2,<3",
    "python-dotenv>=1.0.1,<2",
    "sqlalchemy[asyncio]>=2.0.31,<3",
    "sentry-sdk>=2.10.0,<3",
    "python-logging-discord-handler>=0.1.5,<0.2",
]

[dependency-groups]
dev = [
    "ruff>=0.14.1,<0.15",
    "pytest>=8.4.1",
    "prospector[with-bandit,with-mypy]>=1.10.3,<2",
    "types-PyYAML>=6.0.12.20240311,<7",
    "pyrefly>=0.38.1,<0.39",
    "pytest-cov>=6.2.1,<7",
    "pytest-asyncio>=1.0.0,<2",
    "pytest-mock>=3.14.1,<4",
    "ty>=0.0.1a23,<0.0.2",
    "prek>=0.2.30",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry_bumpversion.file."rflying_tower_bot/__init__.py"]

[tool.poetry_bumpversion.file."tests/test_rflying_tower_bot.py"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "UP",  # pyupgrade
  "D",   # pydocstyle
]
ignore = [
  "D203",
  "D212",
]

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = 'asyncpraw.*'
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[tool.pyrefly]
ignore-missing-imports = ["asyncpraw.*"]
